--- a/src/app/inventory/inventory.component.css
+++ b/src/app/inventory/inventory.component.css
@@ -6,4 +6,10 @@ img{
 .trows{
   border: 3px solid black;
   padding: 1em;
+  display: flex;
+  justify-content: space-between;
+}
+
+button{
+  margin-left: 20px;
 }
